# flow

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  error.rs  fixtures.rs  main.rs  msg.rs
src/cache/: mod.rs
src/config/: mod.rs  schema.rs
src/domain/: ids.rs  mod.rs  pr.rs  repo.rs  session.rs  ticket.rs  work_unit.rs  worktree.rs
src/runtime/: mod.rs
src/services/: git.rs  github.rs  jira.rs  keychain.rs  mod.rs  slug.rs  tmux.rs
src/ui/: mod.rs  theme.rs
src/ui/screens/: confirm_create.rs  dashboard.rs  help.rs  mod.rs  prs.rs  setup.rs  ticket_detail.rs  tickets.rs  worktrees.rs
src/ui/widgets/: key_hint.rs  mod.rs  spinner.rs  status_bar.rs  toast.rs
