[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
keyring = { version = "3", features = ["apple-native"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "sync", "signal", "process", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
async-trait = "0.1.89"
octocrab = { version = "0.50.0", default-features = false, features = ["default-client", "rustls", "jwt-rust-crypto"] }

[dev-dependencies]
insta = "1.47.2"
proptest = "1.11.0"
tempfile = "3.27.0"
